[gd_scene load_steps=5 format=3 uid="uid://cuxkva4yvov7h"]

[ext_resource type="Script" path="res://Scenes/Objects/tilting_platform.gd" id="1_hasvl"]
[ext_resource type="Texture2D" uid="uid://cafcd1k01twp8" path="res://Sprites/GraySquare.png" id="1_m7x1e"]
[ext_resource type="PackedScene" uid="uid://ohvkenw5imen" path="res://Scenes/Objects/weight_area.tscn" id="2_cblta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ytti"]

[node name="TiltingPlatform" type="StaticBody2D"]
modulate = Color(1, 0.517647, 0, 1)
scale = Vector2(4, 4)
script = ExtResource("1_hasvl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(7.96, 0.64)
texture = ExtResource("1_m7x1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(12.8, 1)
shape = SubResource("RectangleShape2D_0ytti")

[node name="RightWeightArea" parent="." instance=ExtResource("2_cblta")]
position = Vector2(70, 1)
scale = Vector2(1.75, 1.12)

[node name="LeftWeightArea" parent="." instance=ExtResource("2_cblta")]
position = Vector2(-70, 1)
scale = Vector2(1.75, 1.12)
